--- a/content/posts/20240326.md
+++ b/content/posts/20240326.md
@@ -1,7 +1,24 @@
 +++
-title = 'デザイン変更'
+title = 'Hugoデザイン変更'
 date = 2024-03-26T21:40:49+09:00
 draft = false
 +++
 
-## Hugo のデザイン変えてみた
+## Hugo デザイン変更
+
+3 年ぶりに Blog を執筆する。
+以前は CircleCI でビルドしていたようだが、今は GitHubActions でできる。時代が変わったのかな。
+バージョンも以下のように変わり、初期ファイルなどいろいろ変わっていた
+
+```
+      HUGO_VERSION: 0.124.1
+```
+
+## 自動ビルドまで
+
+公式サイトを参考にした。
+[hosting-on-github](https://gohugo.io/hosting-and-deployment/hosting-on-github/)
+
+## リポジトリ
+
+`アカウント名.github.io`にしないと css の path がおかしくなってうまく表示されず。どうにかする方法もありそうだけども今はこれでいく。
