--- a/content/posts/20240326.md
+++ b/content/posts/20240326.md
@@ -22,3 +22,7 @@ draft = false
 ## リポジトリ
 
 `アカウント名.github.io`にしないと css の path がおかしくなってうまく表示されず。どうにかする方法もありそうだけども今はこれでいく。
+
+## よく使うコマンド
+
+- `hugo new posts/hogehoge.md` 記事作成
